# RORClient

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-docs.yml  python-publish.yml  release.yml  tests.yml
docs/: Dockerfile  nginx.conf
docs/source/: advanced_usage.rst  asynchronous_usage.rst  conf.py  configuration.rst  index.rst  synchronous_usage.rst
rorclient/: __init__.py  async_client.py  base.py  client.py  config.py  utils.py
rorclient/models/: __init__.py  admin.py  external_id.py  institution.py  link.py  location.py  name.py  relationship.py  search.py
tests/: __init__.py  conftest.py  test_async_client.py  test_client.py  test_models.py
tests/unit/: test_async_client.py  test_base_client.py  test_client.py  test_models.py
