# Copyright (c) 2025 ADernild
#
# Licensed under the MIT License. See LICENSE file in the project root for full license information.
#
# Author: ADernild
# Email: alex@dernild.dk
# Project: RORClient
# Description: Pyproject configuration for the RORClient package.
# Date: 2025-02-17

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rorclient"
version = "0.1.0"
description = "A Python client for interacting with the ROR API"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Alexander Dernild", email = "alex@dernild.dk" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "httpx>=0.28.1,<1.0",
    "pydantic>=2.10.6,<3.0",
    "backoff>=2.2.1,<3.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.1.14,<1.0"]

[tool.ruff]
line-length = 88
extend-select = ["I"] # Enable import sorting
fix = true

[tool.ruff.format]
quote-style = "double"

[project.urls]
"Homepage" = "https://github.com/ADernild/RORClient"
"Bug Tracker" = "https://github.com/ADernild/RORClient/issues"
